<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="txtNombre">Name</string>
    <string name="editNombre">Enter your name</string>
    <string name="txtTelefono">Phone</string>
    <string name="editTelefono">Enter your phone number</string>
    <string name="btnGuardar">Save</string>
    <string name="errMissingData">Missing data</string>
    <string name="errInvalidData">Invalid data</string>
    <string name="toastDataSaved">{0} ({1}) saved</string>
</resources>
